# rs-pass-gen

./: Cargo.toml
src/: main.rs
